fixed BOI covering items in App

--- a/css/style3.scss
+++ b/css/style3.scss
@@ -193,7 +193,7 @@ h1, h2, h3, h4, h5, h6 {
 .items {
   width: 454px + 1018;
   float: left;
-  padding: 0px 15px 0 0;
+  padding: 2px 15px 0 0;
   border-right: 1px dashed $divider;
   li {
     width: 10%;
